istiodemo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo1 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo1
  template:
    metadata:
      labels:
        app: demo1
        version: v1
    spec:
      containers:
      - name: demo1
        image: gcr.io/k8-istio-266003/istioapp1-v1
        ports:
        - name: http
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: demo1
  labels:
    app: demo1
spec:
  selector:
    app: demo1
  ports:
  - name: http
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo2
  template:
    metadata:
      labels:
        app: demo2 
        version: v1
    spec:
      containers:
      - name: demo2 
        image: gcr.io/k8-istio-266003/istioapp2-v1
        ports:
        - name: http
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: demo2 
  labels:
    app: demo2 
spec:
  selector:
    app: demo2
  ports:
  - name: http
    port: 8080
    targetPort: 8080
---
