istiodemo-gw.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istioapp-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istioapp
spec:
  hosts:
  - "*"
  gateways:
  - istioapp-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: demo1 
        port:
          number: 8080
