istiodemo2-routing.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: demo1
spec:
  host: demo1 
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istioapp 
spec:
  hosts:
  - "istio.demo.com"
  gateways:
  - istioapp-gateway 
  http:
  - match:
    - headers:
        end-user:
          exact: mohit 
    route:
    - destination:
        host: demo1 
        subset: v2 # match v2 only
        port:
          number: 8080
  - route: # default route for hello.example.com
    - destination:
        host: demo1 
        subset: v1 # match v1 only
        port:
          number: 8080
