istiodemo3.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: demo1
spec:
  host: demo1 
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v3
    labels:
      version: v3
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istioapp 
spec:
  hosts:
  - "istio.demo.com"
  gateways:
  - istioapp-gateway 
  http:
  - route:
    - destination:
        host: demo1 
        subset: v1
        port:
          number: 8080
      weight: 90
    - destination:
        host: demo1 
        subset: v3
        port:
          number: 8080
      weight: 10
